# NOOR_JET

./: README.md
Noor_robot-/: README.md
Noor_robot-/openai_chat/: CMakeLists.txt  package.xml  response.txt  stt_node.py  tts_node.py
dialogflow_ros/: README.md  setup.py
dialogflow_ros/config/: params.yaml
dialogflow_ros/launch/: dialogflow.launch
dialogflow_ros/scripts/: hotword_dialogflow.py  mic_client.py
dialogflow_ros/scripts/snowboy/resources/: nour.pmdl
dialogflow_ros/src/dialogflow_ros/: dialogflow_client.py
dialogflow_ros/src/dialogflow_ros/utils/: output.py
nour_behavior/: CMakeLists.txt  package.xml
nour_behavior/Bash Runs/: contextual_engine.sh  nav.sh  nour_bringup.sh  nour_hardware.sh  nour_vision.sh
nour_behavior/src/: IsGoalReached.py  detect_service.py  goto.py  move.py  move_hardware_service.py  reached_dist.py  system_check.py
nour_behavior/srv/: ServiceDetect.srv  ServiceExample.srv
nour_core/: LICENSE  README.md
nour_core/imu_calib/include/imu_calib/: apply_calib.h
nour_core/imu_calib/src/: apply_calib.cpp
nour_core/nour_pid/: CMakeLists.txt  README.md  package.xml
nour_core/nour_pid/cfg/: nourPID.cfg
nour_core/nour_pid/include/nour_pid/: nour_pid_core.h
nour_core/nour_pid/src/: nour_pid_core.cpp  pid_configure.cpp  pid_listen.cpp
nour_core/nour_udev/: CMakeLists.txt  README.md  package.xml
nour_core/nour_udev/scripts/: 58-nour.rules  nour_udev.py
nour_core/nour_visualize/: CMakeLists.txt  package.xml
nour_core/nourrobot/launch/: bringup.launch
