<package format="2">
    <name>nour_pid</name>
    <version>0.0.1</version>
    <description>nour_robot PID dynamic_reconfigure</description>
    <author>Juan Jimeno</author>
    <maintainer email="abdalrahman.m5959@gmail.com">Abdalrahman Amer</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nour_msgs</depend>
</package>
